# multicalc

./: README.md  meson.build
src/: main.cpp  template.hpp
subprojects/: ftxui.wrap
